--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
+
 	<html>
+
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+
+	    {% if page.use_math %}
+	      {% include mathjax_support %}
+	    {% endif %}
 		</head>
 		<body>
 			<center>
 				<nav>
 		    		<ul>
 		        		<li><a href="/">Home</a></li>
-								<li><a href="/about">About</a></li>
 			        	<li><a href="/projects">Projects</a></li>
-								<li><a href="/files/KazuyaOtaniCV.pdf">CV</a></li>
+			        	<li><a href="/publications">Publications</a></li>
+			        	<li><a href="/notes">Notes</a></li>
+								<!-- <li><a href="/about">About</a></li> -->
+								<!-- <li><a href="/files/KazuyaOtaniCV.pdf">CV</a></li> -->
 		    		</ul>
 				</nav>
 			</center>
@@ -24,8 +32,9 @@
 			<footer>
 				<center><ul>
 				    <li><a href="mailto:kazuotani14@gmail.com">kazuotani14@gmail.com</a></li>
-				    <li><a target="_blank" href="https://www.linkedin.com/in/kazuyaotani">LinkedIn</a></li>
 				    <li><a target="_blank" href="https://github.com/kazuotani14">Github</a></li>
+				    <li><a target="_blank" href="https://www.linkedin.com/in/kazuyaotani">LinkedIn</a></li>
+				    <li><a target="_blank" href="https://www.goodreads.com/kazuotani14">Goodreads</a></li>
 				</ul></center>
 			</footer>
 		</body>
