--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+	    {% if page.use_math %}
+	      {% include mathjax_support %}
+	    {% endif %}
+
 <h1>{{ page.title }}</h1>
 
 <div class="post">
