--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
 		    		<ul>
 		        		<li><a href="/">Home</a></li>
 			        	<li><a href="/projects">Projects</a></li>
-			        	<li><a href="/publications">Publications</a></li>
-			        	<li><a href="/notes">Notes</a></li>
+			        	<li><a href="/publications.html">Publications</a></li>
+			        	<li><a href="/notes.html">Notes</a></li>
 								<!-- <li><a href="/about">About</a></li> -->
 								<!-- <li><a href="/files/KazuyaOtaniCV.pdf">CV</a></li> -->
 		    		</ul>
