--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,9 @@
 				<nav>
 		    		<ul>
 		        		<li><a href="/">Home</a></li>
-			        	<li><a href="/projects">Projects</a></li>
 			        	<li><a href="/publications.html">Publications</a></li>
-			        	<li><a href="/notes.html">Notes</a></li>
-								<!-- <li><a href="/about">About</a></li> -->
-								<!-- <li><a href="/files/KazuyaOtaniCV.pdf">CV</a></li> -->
+			        	<li><a href="/projects">Projects</a></li>
+								<li><a href="/files/KazuyaOtaniCV.pdf">CV</a></li>
 		    		</ul>
 				</nav>
 			</center>
@@ -31,10 +29,10 @@
 			</div><!-- /.container -->
 			<footer>
 				<center><ul>
-				    <li><a href="mailto:kazuotani14@gmail.com">kazuotani14@gmail.com</a></li>
 				    <li><a target="_blank" href="https://github.com/kazuotani14">Github</a></li>
 				    <li><a target="_blank" href="https://www.linkedin.com/in/kazuyaotani">LinkedIn</a></li>
 				    <li><a target="_blank" href="https://www.goodreads.com/kazuotani14">Goodreads</a></li>
+	        	<li><a href="/notes.html">Notes</a></li>
 				</ul></center>
 			</footer>
 		</body>
