update projects page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 		    		<ul>
 		        		<li><a href="/">Home</a></li>
 			        	<li><a href="/publications.html">Publications</a></li>
-			        	<li><a href="/projects">Projects</a></li>
+			        	<li><a href="/projects.html">Projects</a></li>
 								<li><a href="/files/KazuyaOtaniCV.pdf">CV</a></li>
 		    		</ul>
 				</nav>
